<resources>
    <string name="app_name">MyChat</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_name">Enter name</string>
    <string name="signup">SignUp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="Sign_up_failed">Sign up failed : %1$s</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up_here">Sign Up </string>
    <string name="failed_to_update_username">Failed to update profile : %1$s</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="access_permission_is_required">Access permission is required</string>
    <string name="search">Search</string>
    <string name="account_settings">Account settings</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="age">Age</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="edit_age">Edit Age</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="editname">EditName</string>
    <string name="edit_name">Edit Name</string>
    <string name="change_picture">Change Picture</string>
    <string name="user_photo_removed">removePhoto() , user photo is removed</string>
    <string name="users_photo_is_removed_sussesfully">user photo is removed : Sussesfully</string>
    <string name="user_photo_remove_failure">user photo is not removed : Failure</string>
    <string name="user_profile_was_udated">user profile is Updated : Successfully</string>
    <string name="change_password">Change Password</string>
    <string name="your_pass_was_changed">Your password was chanched!</string>
    <string name="something_went_wrong">Something went wrong : %1$s</string>
    <string name="ressetpasswod" />
    <string name="reset_password_instruction">Reset password instructions has been sent on your email : %1$s</string>
    <string name="ok">Ok</string>
    <string name="email_sent_failed">Faile to send  email : %1$s</string>
    <string name="resend_timer">Resend in : %1$s</string>
    <string name="please_wait">Please wait..</string>
    <string name="check_internet_connection">Check internet Connection</string>
    <string name="close">Close</string>
    <string name="retry">Retry</string>
    <string name="no_internet">no internet</string>
    <string name="chat">Chat</string>
    <string name="requests">Requests</string>
    <string name="find">Find</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_list_will_appear_here">Chat list will appear here</string>
    <string name="fiends_requests_will_appear_here">Fiends requests will appear here</string>
    <string name="friends_list_will_appear_here">Friends list will appear here</string>
    <string name="press_back_again">Press back again to exit</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="failed_to_fetch_friends">Failed to fetch friends : %1$s</string>
    <string name="request_sent_successfully">Request sent successfully</string>
    <string name="failed_to_send_friends_request">Failed to send friend request : %1$s</string>
    <string name="request_cancelled_successfully">Request Cancelled Successfully</string>
    <string name="failed_to_cancel_friends_request">Failed to cancel request : %1$s</string>
    <string name="deny_request">Deny</string>
    <string name="accept_request">Accept</string>
    <string name="failed_to_fetch_friends_request">failed to fetch friends request %1$s</string>
    <string name="failed_to_deny_request">Failed to deny request : %1$s</string>
    <string name="failed_accept_request">Failed accept request : %1$s</string>
    <string name="failed_to_fetch_chat_list">Failed to fetch chat list : %1$s</string>
    <string name="enter_message">Enter Message</string>
    <string name="failed_to_send_message">Failed to send the message : %1$s</string>
    <string name="send_succesfully">Message sent successfully</string>
    <string name="image">image</string>
    <string name="video">Video</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="permission_required_to_access">Permission required to access files</string>
    <string name="upload_progress">Uploading %1$s (%2$s %%)</string>
    <string name="download_progress">Download %1$s (%2$s %%)</string>
    <string name="failed_to_upload_the_file">Failed to upload : %1$s</string>
    <string name="forward">Forward</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="download">download</string>
    <string name="delete_option_clicked">Delete Option Clicked</string>
    <string name="failed_to_delete_message">Failed to delete message : %1$s</string>
    <string name="message_deleted_successfully">message deleted successfully</string>
    <string name="failed_to_delete_file">Failed to delete file : %1$s</string>
    <string name="failed_to_store_file">Failed to store file</string>
    <string name="file_downloaded_successfully">File Downloaded Successfully</string>
    <string name="view">View</string>
    <string name="failed_to_download_the_file">Failed to download the file : %1$s</string>
    <string name="share_with">Share with..</string>
    <string name="failed_to_save_device_token">Failed to save device token</string>
    <string name="notification_sent">Notification Sent</string>
    <string name="failed_to_sent_notification">Failed to send notification : %1$s</string>
    <string name="failed_to_update_user_status">Failed to udate User status, %1$s</string>


</resources>