<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mnuForward"
        android:icon="@drawable/ic_baseline_forward_24"
        android:title="@string/forward"
        app:showAsAction="always" />
    <item
        android:id="@+id/mnuDelete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnuShare"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/uDownload"
        android:icon="@drawable/ic_download"
        android:title="@string/download"
        app:showAsAction="ifRoom" />
</menu>