<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/ic_camera"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/ic_gallery"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/ic_video"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/id_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/red_circle"
        app:srcCompat="@drawable/ic_close"
        android:layout_margin="16dp"/>
</LinearLayout>